CSS Components finished

--- a/CSS-Components/3_10_media_object.html
+++ b/CSS-Components/3_10_media_object.html
@@ -147,14 +147,16 @@
       <!--#####################START HERE######################-->
 
       <!-- MEDIA OBJECT -->
-      <div>
-        <img src="https://source.unsplash.com/random/90x90" />
-        <div>
+      <div class="media">
+        <img class="mr-3 mt-3" src="https://source.unsplash.com/random/90x90" />
+        <div class="media-body mt-4">
           <h5>Media heading</h5>
-          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-          scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-          vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-          vulputate fringilla. Donec lacinia congue felis in faucibus.
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+            temporibus aliquid adipisci dolore quae animi! Facere similique vero
+            deleniti ipsum iusto tempore et dolore, quas reiciendis maxime sequi
+            reprehenderit nihil.
+          </p>
         </div>
       </div>
 
@@ -162,20 +164,20 @@
       <br />
 
       <!-- NESTING MEDIA OBJECTS -->
-      <div>
-        <img src="https://source.unsplash.com/random/90x91" />
-        <div>
+      <div class="media">
+        <img class="mr-3" src="https://source.unsplash.com/random/90x91" />
+        <div class="media-body">
           <h5>Media heading</h5>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
           scelerisque ante sollicitudin. Cras purus odio, vestibulum in
           vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
           vulputate fringilla. Donec lacinia congue felis in faucibus.
 
-          <div>
-            <a href="#">
+          <div class="media mt-4">
+            <a class="pr-3" href="#">
               <img src="https://source.unsplash.com/random/90x92" />
             </a>
-            <div>
+            <div class="media-body">
               <h5>Nested Media</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
               scelerisque ante sollicitudin. Cras purus odio, vestibulum in
@@ -190,9 +192,12 @@
       <br />
 
       <!-- TOP ALIGNED (DEFAULT) -->
-      <div>
-        <img src="https://source.unsplash.com/random/90x93" />
-        <div>
+      <div class="media">
+        <img
+          class="align-self-start mr-3"
+          src="https://source.unsplash.com/random/90x93"
+        />
+        <div class="media-body">
           <h5>Top aligned media</h5>
           <p>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
@@ -207,9 +212,12 @@
       <br />
 
       <!-- CENTER ALIGNED -->
-      <div>
-        <img src="https://source.unsplash.com/random/90x94" />
-        <div>
+      <div class="media">
+        <img
+          class="mr-3 align-self-center"
+          src="https://source.unsplash.com/random/90x94"
+        />
+        <div class="media-body">
           <h5>Center aligned media</h5>
           <p>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
@@ -224,15 +232,20 @@
       <br />
 
       <!-- BOTTOM ALIGNED -->
-      <div>
-        <img src="https://source.unsplash.com/random/90x95" />
-        <div>
+      <div class="media">
+        <img
+          class="mr-3 align-self-end"
+          src="https://source.unsplash.com/random/90x95"
+        />
+        <div class="media-body">
           <h5>Bottom aligned media</h5>
           <p>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-            vulputate fringilla. Donec lacinia congue felis in faucibus.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo
+            illo aperiam minima, excepturi perferendis facere optio magnam natus
+            ipsam ipsum modi voluptatem alias magni dignissimos sit nisi ad vero
+            laborum ducimus nesciunt at repudiandae? Laboriosam facere corporis
+            non! Ad veniam quam quod. Porro sapiente quisquam fugit cumque ipsum
+            repellendus accusantium.
           </p>
         </div>
       </div>
@@ -241,10 +254,10 @@
       <br />
 
       <!-- MEDIA LIST -->
-      <ul>
-        <li>
-          <img src="https://source.unsplash.com/random/90x96" />
-          <div>
+      <ul class="list-unstyled">
+        <li class="media mb-3">
+          <img class="mr-3" src="https://source.unsplash.com/random/90x96" />
+          <div class="media-body">
             <h5>List based media object</h5>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
             scelerisque ante sollicitudin. Cras purus odio, vestibulum in
@@ -252,9 +265,9 @@
             vulputate fringilla. Donec lacinia congue felis in faucibus.
           </div>
         </li>
-        <li>
-          <img src="https://source.unsplash.com/random/90x97" />
-          <div>
+        <li class="media mb-3">
+          <img class="mr-3" src="https://source.unsplash.com/random/90x97" />
+          <div class="media-body">
             <h5>List based media object</h5>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
             scelerisque ante sollicitudin. Cras purus odio, vestibulum in
@@ -262,9 +275,9 @@
             vulputate fringilla. Donec lacinia congue felis in faucibus.
           </div>
         </li>
-        <li>
-          <img src="https://source.unsplash.com/random/90x98" />
-          <div>
+        <li class="media mb-3">
+          <img class="mr-3" src="https://source.unsplash.com/random/90x98" />
+          <div class="media-body">
             <h5>List based media object</h5>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
             scelerisque ante sollicitudin. Cras purus odio, vestibulum in
