--- a/CSS-Components/3_11_jumbotron.html
+++ b/CSS-Components/3_11_jumbotron.html
@@ -10,7 +10,17 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
     <title>Bootstrap Sandbox</title>
   </head>
 
@@ -147,9 +157,9 @@
       <!--#####################START HERE######################-->
 
       <!-- JUMBOTRON -->
-      <div>
-        <h1>Welcome To My Website!</h1>
-        <p>
+      <div class="jumbotron text-center">
+        <h1 class="display-4">Welcome To My Website!</h1>
+        <p class="lead">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum
           necessitatibus perspiciatis cum vitae, modi hic?
         </p>
@@ -158,7 +168,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
           quibusdam.
         </p>
-        <a href="#" role="button">Read More</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Read More</a>
       </div>
 
       <br />
@@ -166,10 +176,10 @@
     <!-- ./container -->
 
     <!-- FLUID JUMBOTRON -->
-    <div>
-      <div>
-        <h1>Fluid Jumbotron</h1>
-        <p>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Fluid Jumbotron</h1>
+        <p class="lead">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
           recusandae voluptatibus, natus architecto asperiores a.
         </p>
